<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/productImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/applogo"
        app:civ_border_width="0dp" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="17sp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/productImage"
        android:layout_marginHorizontal="10dp"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:singleLine="true"
        android:layout_marginHorizontal="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/productName"
        android:layout_centerVertical="true"
        />

    <ImageButton
        android:id="@+id/orderProduct"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/add"
        android:scaleType="fitCenter"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/productPrice"
        android:layout_centerVertical="true"
        android:background="@color/black"
        app:tint="@color/white"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add" />

</RelativeLayout>