<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/oceanblue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cardview_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/productNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/orderedProductIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/asboblar"
            android:layout_gravity="center"
            android:layout_below="@id/productNameTV"
            android:layout_centerInParent="true"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"/>

        <LinearLayout
            android:id="@+id/cancelBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/orderedProductIV"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_background"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bekor_qilish"
                android:textAlignment="center"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_weight="2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/cancel"
                android:contentDescription="@string/cancel" />

        </LinearLayout>


    </RelativeLayout>






</com.google.android.material.card.MaterialCardView>